hard-gists/373f0857211e860c7591/run.log
=== Docker Run Log for 373f0857211e860c7591 ===
Started at: Mi 29. Okt 13:58:17 CET 2025

[2025-10-29 13:58:18] START: Running container for 373f0857211e860c7591
[2025-10-29 13:58:18] SUCCESS: Container c47d69d0c46d60d35d8ccaef97ac54c7f134a32c0a7064dc09de3f87af7abe48 started for 373f0857211e860c7591
=== Container logs for 373f0857211e860c7591 ===
  File "/snippet.py", line 12
    print item.xpath('@itemtype').extract()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 373f0857211e860c7591 ===
[2025-10-29 13:58:20] INFO: Container c47d69d0c46d60d35d8ccaef97ac54c7f134a32c0a7064dc09de3f87af7abe48 has stopped
